[tool.poetry]
name = "mkdocs-blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Dakarun <jasperjgroot@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
