[tool.poetry]
name = "mkdocs-blog"
version = "0.1.0"
description = "Personal blog"
authors = ["Dakarun <jasperjgroot@gmail.com>"]
readme = "README.md"
packages = [{include = "mkdocs_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-mermaid2-plugin = "^0.6.0"
mkdocs-material = "^9.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
